--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-inzi": "^1.0.7",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^6.6.7"
+    "firebase-admin": "^11.2.0",
+    "mongoose": "^6.6.7",
+    "multer": "^1.4.5-lts.1"
   }
 }
